# SEC-finetune

./: .env.example  .flake8  .gitignore  2025-11-15-caveat-the-messages-below-were-generated-by-the-u.txt  2025-11-17-LDA model training topic model.txt  CHANGES.md  CHANGES_SUMMARY.md  CLAUDE.md  CONFIGURATION_REFACTOR_SUMMARY.md  CURRENT_STRUCTURE.md  EXTRACTION_FAILURE_COMPLETE_ANALYSIS.md  PHASE1_IMPLEMENTATION_REPORT.md  POWERSHELL_GUIDE.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  colormind-paper-dashboard.css  diagnostic_output.txt  m10_2_financial_analysis_finetuning.py  pyproject.toml  report.md  repository.txt  requirements-dev.txt  requirements.txt
.claude/skills/: adr_generator.md  audit_specialist.md  prd_generator.md  rfc_generator.md  story_generator.md
.claude/templates/: AUDIT-template.md
.github/ISSUE_TEMPLATE/: gatekeeper_failure.md
.github/workflows/: ci.yml  gatekeeper.yml
configs/: README.md  config.yaml
configs/features/: annotation.yaml  readability.yaml  risk_analysis.yaml  sentiment.yaml  topic_modeling.yaml
configs/qa_validation/: README.md  cleaning.yaml  extraction.yaml  features.yaml  health_check.yaml  parsing.yaml
docs/: 5_WHYS_ANALYSIS_EXTRACTION_FAILURE.md  CHANGES.md  CONFIG_MIGRATION_GUIDE.md  DATA_HEALTH_CHECK_GUIDE.md  DOCUMENTATION_REORGANIZATION.md  DRIFT_DETECTION_GITHUB_ACTIONS.md  ENUM_CONFIG_PATTERNS.md  EXTRACTION_FIX_SUMMARY.md  EXTRACTOR_QA_BATCH_GUIDE.md  FILE_TYPE_CONFIGURATION.md  GATEKEEPER_IMPLEMENTATION_SUMMARY.md  GATEKEEPER_QUICK_START.md  INSTALLATION.md  PIPELINE_REFACTOR_SUMMARY.md  PREPROCESSING_INCIDENT_REPORT.md  PREPROCESSING_TIMEOUT_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_INSTALLATION_SECTION.md  RETRY_MECHANISM.md  SHARED_KNOWLEDGE.md  TOPIC_MODELING_QUICK_START.md  USAGE_GUIDE_SEC_PARSER.md  code_guidance.md  full_test_results.txt  test_final_results.txt  topic_modeling_data_requirements.md
docs/architecture/: FILE_ORGANIZATION.md  README.md  data_dictionary.md
docs/archive/: 2025-11-14_CLEANING_SUMMARY.md  2025-11-15_PYPROJECT_UPDATE_SUMMARY.md  2025-12-01_PREPROCESSING_INCIDENT_REPORT.md  2026-01-04_test_results.txt  2026-01-04_test_summary.txt  2026-02-10_RESEARCH_INDEX.md  2026-02-10_RESEARCH_SUMMARY.md  2026-02-10_research.md  2026-02-16_CODE_REORGANIZATION.md  2026-02-17_PHASE3_INSTALLATION.md  README.md
docs/config/: PYDANTIC_V2_ENFORCEMENT.md  README.md
docs/dev/: DOCUMENTATION_WORKFLOW.md  README.md
docs/features/: FEATURE_ENGINEERING_GUIDE.md  README.md
docs/general/: CHANGELOG.md
docs/implementation/: PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_TEST_REPORT.md  PHASE3_COMPLETE_SUMMARY.md  README.md
docs/ops/: QUICKSTART_DRIFT_DETECTION.md  README.md  runbook.md
docs/preprocessing/: EXTRACTION_BEST_PRACTICES.md  README.md
docs/requirements/: PRD-001_SEC_Finetune_MVP.md  PRD-002_SEC_Finetune_Pipeline_v2.md  PRD-003_Training_Data_Quality_Remediation.md  PRD-004_Business_Intelligence_Use_Cases.md  README.md  requirements_cleaning.txt
docs/setup/: POWERSHELL_GUIDE.md  README.md  RUN_SCRIPTS.md  SETUP_COMPLETE.md
docs/utils/: INCREMENTAL_PROCESSING_GUIDE.md  README.md
docs/validation/: README.md
examples/: 01_basic_extraction.py  02_complete_pipeline.py  03_sentiment_analysis.py  04_sentiment_risk_classification.py  05_progress_logging_demo.py
hack/: lint_audit.py  lint_check.sh  spec_metadata.sh
notebooks/: sec_html_structure_exploration.ipynb
reports/: extractor_qa_20251230_size_validation.md  extractor_qa_batch_test.md  extractor_qa_with_fixes.md  nlp_validation_20251227.md  short_segment_patterns.tsv  short_segment_sample_20260303_160207.tsv  validation_report_2025-12-15.md
reports/sec_html_structure/: 2026-02-22_16-55-10_sec_html_structure_findings.md  2026-02-22_17-11-29_sec_html_structure_findings.md  2026-02-22_17-11-39_sec_html_structure_findings.md  2026-02-22_17-30-04_sec_html_structure_findings.md  2026-02-22_17-33-12_sec_html_structure_findings.md  2026-02-22_17-39-25_sec_html_structure_findings.md  2026-02-22_17-39-28_sec_html_structure_findings.md  2026-02-22_17-39-32_sec_html_structure_findings.md  2026-02-22_17-40-28_sec_html_structure_findings.md  2026-02-22_17-49-51_sec_html_structure_findings.md  2026-02-22_17-49-55_sec_html_structure_findings.md  2026-02-22_17-57-43_sec_html_structure_findings.md  findings_report.md
scripts/: README.md
scripts/01_data_collection/: download_sec_filings.py
scripts/02_data_preprocessing/: batch_parse.py  run_preprocessing_pipeline.py
scripts/04_feature_engineering/: detect_drift.py  extract_features.py  topic_modeling_demo.py
scripts/06_training/: train_model.py
scripts/07_evaluation/: evaluate_model.py
scripts/08_inference/: predict.py
scripts/data_collection/: README.md  download_sec_filings.py
scripts/data_preprocessing/: batch_extract.py  batch_parse.py  run_preprocessing_pipeline.py
scripts/data_splitting/: create_train_test_split.py
scripts/eda/: exploratory_analysis.py  sec_html_structure_explorer.py
scripts/evaluation/: evaluate_model.py
scripts/feature_engineering/: README.md  auto_label.py  detect_drift.py  extract_features.py  extract_sentiment_features.py  run_feature_pipeline.py  segment_annotator_cli.py  topic_modeling_demo.py  validate_topic_modeling_corpus.py
scripts/inference/: predict.py
scripts/training/: train_model.py
scripts/utils/: README.md  RETRY_QUICK_START.md  check_cop_file.py  check_installation.py  doc_gen.py  generate_research_index.py  retry_failed_files.py  setup_nlp_models.py  show_segment_sample.py  test_imports.py  test_preprocessing_timeout.py  test_retry_logic.py  test_timeout.py
scripts/validation/: README.md
src/: config.py
src/analysis/: __init__.py  inference.py  segment_annotator.py
src/config/: __init__.py  _loader.py  extraction.py  legacy.py  models.py  naming.py  paths.py  preprocessing.py  qa_validation.py  run_context.py  sec_parser.py  sec_sections.py  testing.py
src/features/: __init__.py  sentiment.py
src/models/: __init__.py
tests/: __init__.py  conftest.py  test_cleaning.py
(+275 files in other folders)
