# SEC Filing Analyzer - Project Configuration
#
# INSTALLATION:
#   1. pip install -e .
#   2. python -m spacy download en_core_web_sm  (REQUIRED for text cleaning)
#   3. OR run: python setup_nlp_models.py
#
# See INSTALLATION.md for complete setup instructions

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-filing-analyzer"
version = "0.1.0"
description = "MVP for SEC 10-K Risk Factor Analysis using NLP and sec-parser"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Beth", email = "beth88.career@gmail.com"}
]
keywords = ["SEC", "10-K", "10-Q", "NLP", "risk-analysis", "financial-analysis", "sec-parser", "spacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # SEC Filing Parsing (PINNED for reproducibility)
    "sec-parser==0.54.0",
    "sec-downloader>=0.10.0",

    # Core NLP and ML
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "spacy>=3.7.0",  # For advanced text preprocessing (lemmatization, stopwords, etc.)
    "gensim>=4.0.0",  # For topic modeling (LDA)
    "sentence-transformers>=2.2.2", # For semantic chunking and zero-shot labeling

    # Data handling
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "dill>=0.3.7",  # Advanced serialization for complex objects (sec-parser elements)

    # Visualization and UI
    "streamlit>=1.28.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Text processing and parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # Configuration and environment
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",

    # Machine Learning
    "scikit-learn>=1.3.0",

    # Data validation and configuration (ENFORCED: Pydantic v2.12.4+)
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# Advanced NLP models for better accuracy (optional - larger downloads)
# NOTE: spaCy language models must be downloaded separately after installation
nlp-advanced = [
    # For better accuracy, install one of these and download the model:
    # Medium model (40 MB): python -m spacy download en_core_web_md
    # Large model (560 MB): python -m spacy download en_core_web_lg
    # Transformer-based models (requires GPU): spacy-transformers>=1.3.0
]

# Model fine-tuning dependencies (for future MLOps pipeline)
finetune = [
    "datasets",
    "peft",
    "bitsandbytes",
    "accelerate",
    "trl",
]

# Financial data and external services (for future use)
external = [
    "yfinance",
    "openai",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
]

# Testing and validation
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

# All optional dependencies (combine all extras without self-reference)
all = [
    # From finetune
    "datasets",
    "peft",
    "bitsandbytes",
    "accelerate",
    "trl",
    # From external
    "yfinance",
    "openai",
    # From dev
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
    # From test
    "pytest-mock>=3.12.0",
    # nlp-advanced has no actual packages, just instructions for spacy models
]

[project.urls]
Homepage = "https://github.com/yourusername/sec-filing-analyzer"
Documentation = "https://github.com/yourusername/sec-filing-analyzer/blob/main/README.md"
Repository = "https://github.com/yourusername/sec-filing-analyzer"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | data
  | models
  | logs
  | output
  | cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
# Pydantic plugin for better type checking of Pydantic models
plugins = ["pydantic.mypy"]

# Pydantic-specific mypy configuration
[[tool.mypy.overrides]]
module = "pydantic"
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
